<resources>
    <string name="app_name">Doug Mitchell Code Test</string>
    <string name="action_settings">Settings</string>
    <string name="no_persons_present">There has not been any people added yet. Get started by clicking on the button below.</string>
    <string name="title_activity_person_detail">Person Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="zip_code">Zip Code</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="no_persons_additional_info">View and edit records by selecting from the
        list.\n\nSwipe left to delete.
    </string>
    <string name="cannot_save_person">First or last name is required in order to save.</string>
</resources>
