<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" app:srcCompat="@drawable/paisley"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_margin="12dp"
                      android:id="@+id/layout_container"
                      android:orientation="vertical">

            <EditText android:id="@+id/first_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:hint="@string/first_name" android:inputType="textCapWords"/>

            <EditText android:id="@+id/last_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:hint="@string/last_name" android:inputType="textCapWords"/>

            <EditText android:id="@+id/phone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:hint="@string/phone_number" android:inputType="phone"/>

            <EditText android:id="@+id/date_of_birth"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:hint="@string/date_of_birth"/>

            <EditText android:id="@+id/zip_code"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:hint="@string/zip_code" android:inputType="number"/>


            <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
            android:weightSum="2">
                <Button android:id="@+id/done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/primary_btn"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/done"/>

                <Button android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/success_btn"
                        android:text="@string/save"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>